--- a/mc.html
+++ b/mc.html
@@ -90,25 +90,27 @@
                         <div id="wrapperMc">
                             <div id="anotherWrapper">
                                 <!-- Dexrn: prob rename this I was too lazy to come up with a name for it lmao -->
-                            <img class="imgWorld"  draggable="false" src="/src/images/mc/world.png" alt="A screenshot of the Minecraft world">
-                            <div class="img-holder">
-                                <a class="button green mcFont link mcMapButton" href="http://mc.aridan.net:8172" target="_blank">Explore
-                                    the map →</a>
-                           </div>
-                        </div>
+                                <img class="imgWorld" draggable="false" src="/src/images/mc/world.png"
+                                    alt="A screenshot of the Minecraft world">
+                                <div class="img-holder">
+                                    <a class="button green mcFont link mcMapButton" href="http://mc.aridan.net:8172"
+                                        target="_blank">Explore
+                                        the map →</a>
+                                </div>
+                            </div>
                             <div id="mcJoinButtons">
-                                <button id="javaButton" class="mc mcMenu green" onclick="showJava()">Java</button>
-                                <button id="bedrockButton" class="mc mcMenu green"
+                                <button id="javaButton" class="mc mcMenu mcFont green" onclick="showJava()">Java</button>
+                                <button id="bedrockButton" class="mc mcMenu mcFont green"
                                     onclick="showBedrock()">Bedrock</button>
                             </div>
 
                             <div id="java" class="hide">
-                                <p>To join on Java, use this:
+                                <p class="mcFont">To join on Java, use this:
                                     Address: mc.aridan.net
                                 </p>
                             </div>
                             <div id="bedrock" class="hide">
-                                <p>
+                                <p class="mcFont">
                                     To join on Bedrock, use this:
                                     Address: mc.aridan.net
                                     Port: 25609
@@ -125,10 +127,11 @@
                                 <a class="button dark mcFont"
                                     href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
                                     Download the aridan.net Modpack
-                                    <a class="button dark mcFont" href="/src/downloads/SwedenTweaks.zip"
-                                        download="SwedenTweaks.zip">
-                                        Download the aridan.net Resource pack
-                                    </a>
+                                </a>
+                                <a class="button dark mcFont" href="/src/downloads/SwedenTweaks.zip"
+                                    download="SwedenTweaks.zip">
+                                    Download the aridan.net Resource pack
+                                </a>
                             </div>
                         </div>
                         <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the
