Added error message
Probably not how to add an error message, but it works so I'm not going to complain.

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
                                 <div id="landyardDiscord">
                                     <div id="loading">
                                         <div>
-                                            <div class="lds-ring">
+                                            <div id="loadingSpinner" class="lds-ring">
                                                 <div></div>
                                                 <div></div>
                                                 <div></div>
                                                 <div></div>
                                             </div>
                                         </div>
+                                        <p id="errorMessage">An error occurred.<br>Please try again later.</p>
                                     </div>
                                      <div id="loadedLandyard">
                                         <div id="discord">
