--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                                                 </div>
                                                 <div id="discordActivityInfo">
                                                     <h3 id="activityName"></h3>
-                                                    <p id="activityState"></p>
+                                                    <p id="activityState" class="subTitle"></p>
                                                     <p id="activityDetails"></p>
-                                                    <p id="activityTime"></p>
+                                                    <p id="activityTime" class="subTitle"></p>
                                                 </div>
                                             </div>
                                         </div>
