--- a/sv/projects.html
+++ b/sv/projects.html
@@ -63,12 +63,15 @@
                     <h1>Projekt</h1>
                     <div>
                         <div>
+                            <div class="centererWrapper">
+                                <div class="titleUnderText">
                             <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland. Vissa
                                 av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande. Ta och
                                 kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket fall så
                                 hade jag kul när jag skapade dem!
                                 <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg">
                             </p>
+                                </div>
                             <div class="project">
                                 <p class="projectName">Den där webbsidan (aridan.net)</p>
                                 <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande samt min arbetslivserfarenhet. Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor se bra ut!</p>
@@ -76,15 +79,15 @@
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/link.svg"> <a href="https://aridan.net"
-                                            target="_blank">aridan.net</a></p>
+                                            target="_blank"><br>aridan.net</a></p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/link.svg"> <a
                                             href="https://github.com/actuallyaridan/aridan.net"
-                                            target="_blank">GitHub</a></p>
+                                            target="_blank"><br>GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                            src="/src/images/emojis/teacher.svg"><br>HTML, CSS, JavaScript</p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/judge.svg"> MIT licensen</p>
+                                            src="/src/images/emojis/judge.svg"><br>MIT licensen</p>
                                 </div>
                             </div>
                             <div class="project">
@@ -95,41 +98,23 @@
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/link.svg"> <a
                                             href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
-                                            target="_blank">GitHub</a></p>
+                                            target="_blank"><br>GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"> Översättnings-teknologi
+                                            src="/src/images/emojis/teacher.svg"><br>Översättnings-teknologi
                                     </p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/judge.svg"> Ägs by <a href="https://dimden.dev"
+                                            src="/src/images/emojis/judge.svg"><br>Ägs av <a href="https://dimden.dev"
                                             target="_blank">dimden</a></p>
                                 </div>
                             </div>
                             <div class="project">
-                                <p class="projectName">iPod Video 5th Gen</p>
-                                <p class="projectDesc">Jag gillar att modifiera äldre iPods. Denna iPod har jag lagt en genomskinlig framsida samt klickhjul på.Dessutom så bytte jag utt batteriet mot en större variant och bytte ut hårddisken med ett SD kort.</p>
+                                <p class="projectName">Diverse iPods</p>
+                                <p class="projectDesc">Jag gillar att modifiera äldre iPods. På vissa iPod har jag lagt en genomskinlig framsida samt klickhjul på.Dessutom så byter jag ut batteriet på dem mot en större variant och byter ut hårddiskarna med ett SD kort.</p>
                                 <div>
                                     <p class="projectStatus completed">Färdigt</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
+                                            src="/src/images/emojis/teacher.svg"><br>Modifiering av elektronik</p>
                                 </div>
-                            </div>
-                            <div class="project">
-                                <p class="projectName">iPod Click Wheel 4th Gen</p>
-                                <p class="projectDesc">Denna iPod bytte jag ut klickhjulet på, samt så bytte jag ut batteriet och uppgraderade den till ett SD kort istället för en hårddisk.</p>
-                                    <div>
-                                        <p class="projectStatus completed">Färdigt</p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
-                                    </div>
-                            </div>
-                            <div class="project">
-                                <p class="projectName">iPod Mini 2nd Gen </p>
-                                <p class="projectDesc">Denna iPod modifierade jag med ett nytt batteri och ett Compact Flash kort. Visste du att iPod mini serien använder Microdrives, en hårddiskstandard som har exakt samma kontakter som Compact Flash?</p>
-                                    <div>
-                                        <p class="projectStatus completed">Färdigt</p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
-                                    </div>
                             </div>
                             <div class="project">
                                 <p class="projectName">"Hackintoshing"</p>
@@ -137,7 +122,7 @@
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"> Mjukvara</p>
+                                                src="/src/images/emojis/teacher.svg"><br>Mjukvara</p>
                                     </div>
                             </div>
                         </div>
