--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -59,59 +59,67 @@
                 <div>
                     <h1>Erfarenhet</h1>
                     <div>
-                        <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.
-                            När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta så mycket när de var så små.
-                            Därmed kan jag mycket om IT trots min ålder, och jag vet att jag kan imponera med min kunskap.</p>
-                        <div class="centerer">
-                            <div class="centererItems">
-                                <a href="cv" class="cvButton">Begär CV</a>
-                                <a class="socialMedia linkedin"
-                                    href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
+                        <div class="centererWrapper">
+                            <div class="titleUnderText">
+                                <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett
+                                    glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.
+                                    När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta
+                                    så mycket när de var så små.
+                                    Därmed kan jag mycket om IT trots min ålder, och jag vet att jag kan imponera med
+                                    min kunskap.</p>
                             </div>
-                        </div>
-                        <div>
-                            <div class="work" id="jobs">
-                                <p class="subTitleExp">Arbetslivserfarenhet</p>
-                                <div class="project">
-                                    <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
-                                    <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
-                                        Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt reparerar teknik och hur man är en bra säljare.
-                                        Det var riktigt spännande att jobba där!</p>
-                                    <div class="projectStuff">
-                                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/clock.svg">nov 2022 - okt 2023</p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"> <a
-                                                href="https://itcarestore.se" target="_blank">itcarestore.se</a></p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg">Webbutveckling 
-                                            Kundbemötande Tekniska reparationer</p>
-                                    </div>
+                            <div class="centerer">
+                                <div class="centererItems">
+                                    <a href="cv" class="cvButton">Begär CV</a>
+                                    <a class="socialMedia linkedin"
+                                        href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/"
+                                        target="_blank">LinkedIn</a>
                                 </div>
                             </div>
-                            <div class="education" id="education">
-                                <p class="subTitleExp">Utbildning</p>
-                                <div class="project">
-                                    <p class="projectName">Dator- och kommunikationsteknikselev på Teknikum </p>
-                                    <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom nätverkande när det gäller routing och switching.
-                                        Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera servrar som körs på Windows Server tillsammans med en
-                                        grundkurs i nätverkssäkerhet, elektronik och webbutveckling!
-                                    </p>
-                                    <div class="projectStuff">
-                                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/clock.svg">agu 2020 - jun 2023</p>
-                                                <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                    src="/src/images/emojis/link.svg"> <a
-                                                    href="https://teknikum.se" target="_blank">teknikum.se</a></p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg">Nätverk Datorer Webbutveckling Elektronik</p>
-                                    </div>
+                            <p class="subTitleExp">Arbetslivserfarenhet</p>
+                            <div class="project">
+                                <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
+                                <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och
+                                    jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
+                                    Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt
+                                    reparerar teknik och hur man är en bra säljare.
+                                    Det var riktigt spännande att jobba där!</p>
+                                <div class="projectStuff">
+                                    <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/clock.svg"><br>nov 2022 - okt 2023</p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/link.svg"> <a href="https://itcarestore.se"
+                                            target="_blank"><br>itcarestore.se</a></p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/teacher.svg"><br>Webbutveckling <br>Kundbemötande <br>Tekniska reparationer</p>
+                                </div>
+                            </div>
+
+                            <p class="subTitleExp">Utbildning</p>
+                            <div class="project">
+                                <p class="projectName">Dator- och kommunikationsteknikselev på Teknikum </p>
+                                <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom
+                                    nätverkande när det gäller routing och switching.
+                                    Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera
+                                    servrar som körs på Windows Server tillsammans med en
+                                    grundkurs i nätverkssäkerhet, elektronik och webbutveckling!
+                                </p>
+                                <div class="projectStuff">
+                                    <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/clock.svg"><br>agu 2020 - jun 2023</p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/link.svg"> <a href="https://teknikum.se"
+                                            target="_blank"><br>teknikum.se</a></p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling<br>
+                                        Elektronik</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
     <footer>
