--- a/mc.html
+++ b/mc.html
@@ -143,9 +143,9 @@
     </main>
     <footer>
         <div class="footer">
-            <p class="mcFont">© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT
-                license.Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. Font and background image are
-                from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.</p>
+            <p class="mcFont">Font and background image are
+                from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.<br>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT
+                license. <br>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. </p>
         </div>
     </footer>
 </body>
