live updating lanyard + divider cuz it looks nice

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                                 <p id="discordName">actuallyaridan</p>
                                                 <img id="discordPFP" class="discordPFP" draggable="false" width="128px" height="128px">
                                             </div>
+                                            <hr width="100%" class="divider">
                                             <div id="discordActivity">
                                                 <div id="discordActivityImages">
                                                     <img id="activityLogoLarge" draggable="false" width="96px" height="96px"></img>
