--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </main>
     <footer>
         <div class="footer">
-            <p>Images used under Fair Use. <br>Any shown album art is owned by their respective record labels.<br>Any application logo displayed is owned by their respective copyright holder.  <br>No images are stored directly this website. No copyright infringement is intended.</p>
+            <p>Images used under Fair Use. <br>Any shown album art is owned by their respective record labels.<br>Any application logo displayed is owned by their respective copyright holder.  <br>No images are stored directly on this website. No copyright infringement is intended.</p>
             <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
             <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
         </div>
