--- a/sv/index.html
+++ b/sv/index.html
@@ -137,7 +137,7 @@
     </main>
     <footer>
         <div class="footer">
-            <p>Bilder som visas används endast för utsmyckning under upphovsrättslagen. <br>Alla visade albumomslag ägs av respektive skivbolag.<br>Alla visade applikationsikoner ägs av respektive upphovsrättsinnehavare.  <br>Inga bilder lagras direkt på denna webbplats. Intrång i upphovsrätt ej avsedd.</p>
+            <p>Allt upphovsrättsskyddat material (som albumomslag, applikationsikoner och dylikt) som visas på den här sidan ägs av respektive upphovsrättsinnehavare.  <br>Inga bilder lagras direkt på denna webbplats. Intrång i upphovsrätt ej avsedd. <br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat material.</p>
             <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
             <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
         </div>
