--- a/sv/settings.html
+++ b/sv/settings.html
@@ -118,6 +118,15 @@
                                 </label>
                             </div>
                         </li>
+                        <li>
+                            <p><label for="update-every-sec">Uppdatera aktivitet varje sekund (fungerar inte)</label></p>
+                            <div>
+                                <label class="switch">
+                                    <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true" checked>
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
