--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                                         <div id="discord">
                                             <div id="discordInfo" class="discordInfo">
                                                 <p id="discordName">actuallyaridan</p>
-                                                <img id="discordPFP" class="discordPFP" draggable="false" width="128px" height="128px">
+                                                <img id="discordPFP" class="discordPFP" draggable="false" width="128px" height="128px" alt="">
                                             </div>
                                             <hr width="100%" class="divider">
                                             <div id="discordActivity">
                                                 <div id="discordActivityImages">
-                                                    <img id="activityLogoLarge" draggable="false" width="96px" height="96px"></img>
-                                                    <img id="activityLogoSmall" draggable="false" width="32px" height="32px"></img>
+                                                    <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt="">
+                                                    <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt="">
                                                 </div>
                                                 <div id="discordActivityInfo">
                                                     <h3 id="activityName"></h3>
