Fixed CSS issues and added conten
Removed white-space: nowrap to fix wrapping issues and added my tech specs. Still needs images. Also bumped version to 1.2c.

--- a/index.html
+++ b/index.html
@@ -103,12 +103,26 @@
                                 </div>
                             </div>
                             <div class="project">
-                                <span id="dcNameContainer">
-                                <p class="projectName" id="dcActivityHeaderName">Discord activity</p>
-                                <p id="statusWrapper" class="dcloading">loading</p>
-
+                                <p class="projectName">Technology</p>
+                                <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
+                                <div class="projectStuff">
+                                    <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/clock.svg"><br><span class="langProf">Phone:<br></span>iPhone 15 Pro</p>
+                                            <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                                src="/src/images/emojis/clock.svg"><br><span class="langProf">Laptop:<br></span>MacBook Air<br>(13", 2020, <br>M1, 8GB/256GB)</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="/src/images/emojis/globe.svg"><br><span class="langProf">Computer:<br></span>
+                                        AMD Ryzen 5  3600<br>ASUS Radeon RX6700 XT OC Edition <br>16GB RAM<br>Windows 11, macOS Sonoma
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <span>
+                                    <div id="dcNameContainer">
+                                        <p class="projectName" id="dcActivityHeaderName">Discord activity</p>
+                                        <p id="statusWrapper" class="dcloading">loading</p>
+                                    </div>
                                 </span>
-
                                 <div id="landyardDiscord">
                                     <div id="loading">
                                         <div>
