--- a/settings.html
+++ b/settings.html
@@ -157,7 +157,7 @@
     </main>
     <footer>
         <div class="footer">
-            <p>Version 1.2b (released 2024-03-23)</p>
+            <p>Version 1.2c (released 2024-03-27)</p>
             <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
             <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
         </div>
