--- a/sv/settings.html
+++ b/sv/settings.html
@@ -152,7 +152,7 @@
     </main>
     <footer>
         <div class="footer">
-            <p>Version 1.2b (släppt 2024-03-23)</p>
+            <p>Version 1.2c (släppt 2024-03-27)</p>
             <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
             <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
         </div>
