--- a/settings.html
+++ b/settings.html
@@ -124,7 +124,7 @@
                             </div>
                         </li>
                         <li>
-                            <p><label for="update-every-sec">Update activity every second (does not work)</label></p>
+                            <p><label for="update-every-sec">Update activity every second</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true" checked>
@@ -145,7 +145,7 @@
             
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Settings saved successfully!Refresh to apply.
+                            Settings saved successfully! Refresh to apply.
                         </div>
                     </div>
                 </div>
