Fixed dumb grammatical error (cries)

--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="project">
                                     <p class="projectName">Various iPods</p>
-                                    <p class="projectDesc">I have modified this numerous iPods with a transparent click wheels and
+                                    <p class="projectDesc">I have modified numerous iPods. Some even with transparent click wheels and
                                         buttons along with transparent faceplates. I've also installed a larger batteries
                                         and replaced their hard drives with microSD cards.</p>
                                     <div>
